# renderer_cuda

./: CMakeLists.txt  README.md  main.cu  renderer.cu  renderer.cuh
auxil/: relation.aux  relation.out  relation.toc
documentation/: appendixA.tex  relation.tex  tests.tex
result_16/csv/: result-1024-1024-circles.csv  result-1024-1024.csv  result-256-256-circles.csv  result-512-512-circles.csv  result-512-512.csv
result_16/csv/backup/: result-1024-1024.csv
result_16/csv/test1000/: result-256-256.csv
result_16/csv/test10000/: result-1024-1024.csv  result-256-256.csv  result-512-512.csv
results/: generate_plots.py  plots.py  test.csv
results/csv/: result-1024-1024-blocks.csv  result-1024-1024-memcpy.csv  result-1024-1024.csv  result-256-256-blocks.csv  result-256-256-circles.csv  result-256-256-memcpy.csv  result-256-256.csv  result-512-512-blocks.csv  result-512-512-memcpy.csv  result-512-512.csv
results/csv/backup/: result-1024-1024.csv  result-256-256.csv
src/: renderer.cu  renderer.cuh  test.cpp  test.h  utils.cpp  utils.h
